--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,5 +18,11 @@ jobs:
       with:
         go-version: 1.15
 
-    - name: Build
-      run: sh run.sh
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: run.sh
