--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,6 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build
-      run: sh run.sh
+      run: bash run.sh
       env:
         VUE_APP_IP: ${{ secrets.VUE_APP_IP }}
