--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vue-axios": "^3.2.4"
+    "vue-axios": "^3.2.4",
+    "vue-router": "^4.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
